modif forme questions

--- a/Main.html
+++ b/Main.html
@@ -47,19 +47,25 @@
         
         <fieldset>
             <p>Question choix unique</p>
-            <input type="radio" id="D" name="unique" value="D">
-            <label for="D">Réponse D</label>
-            <input type="radio" id="E" name="unique" value="E">
-            <label for="E">Réponse E</label>
-            <input type="radio" id="F" name="unique" value="F">
-            <label for="F">Réponse F</label>
+            <label class="form-control">
+                <input type="radio" id="D" name="unique" value="D">
+                Réponse D
+            </label>
+            <label class="form-control">
+                <input type="radio" id="E" name="unique" value="E">
+                Réponse E
+            </label>
+            <label class="form-control">
+                <input type="radio" id="F" name="unique" value="F">
+                Réponse F
+            </label>
         </fieldset>
 
         <fieldset>
-            <p>Question text</p>
-            <label for="Q15">Question 15</label>
-            <input type="text" id="Q15" name="Q15">
-            
+            <label class="form-control">
+                Question nombre
+                <input type="nombre" id="Q15" name="Q15">
+            </label>
         </fieldset>
 <!---->
         <button type="submit" name="sauvegarder" id="sauvegarder">Sauvegarder</button>
