--- a/Main.html
+++ b/Main.html
@@ -11,9 +11,11 @@
 </head>
 <body>
     <header>
+        <img src="Images\Google_Maps_icon_(2015-2020).svg.png" alt="Logo ASRE49">
         <h1>Concours sécurité routière ASRE49</h1>
     </header>
     <form id="formulaire">
+        <p>Vos informations :</p>
         <label>
             Nom :
             <input type ="text" name="nom" id="nom">
@@ -40,6 +42,7 @@
             </select>
         </label>
         
+        <p>Questionnaire :</p>
 
         <fieldset>
             <p class="question">Question choix multiples</p>
@@ -76,7 +79,7 @@
         <fieldset>
             <p class="question">Question choix unique</p>
             <label>
-                Question 15
+                Votre réponse : 
                 <input type ="number" name="Q15" id="Q15">
             </label>
         </fieldset>
