--- a/Main.html
+++ b/Main.html
@@ -11,8 +11,9 @@
 </head>
 <body>
     <header>
-        <img src="Images\Google_Maps_icon_(2015-2020).svg.png" alt="Logo ASRE49">
+        <img src="Images\Google_Maps_icon_(2015-2020).svg.png" alt="Logo ASRE49" id="logo_ASRE49">
         <h1>Concours sécurité routière ASRE49</h1>
+        <img src="Images/dessin_route.png" alt="dessin d'une route" class="deco">
     </header>
     <form id="formulaire">
         <p>Vos informations :</p>
