Nouvelle page post validation

--- a/Main.html
+++ b/Main.html
@@ -16,7 +16,7 @@
         <img src="Images/dessin_route.png" alt="dessin d'une route" class="deco">
     </header>
     <form id="formulaire">
-        <p>Vos informations :</p>
+        <p class="sous-titre">Vos informations :</p>
         <label>
             Nom :
             <input type ="text" name="nom" id="nom">
@@ -43,7 +43,7 @@
             </select>
         </label>
         
-        <p>Questionnaire :</p>
+        <p class="sous-titre">Questionnaire :</p>
 
         <div id="questionnaire">
 
@@ -72,10 +72,6 @@
                 <label class="form-control">
                     <input type="radio" id="E" name="unique" value="E">
                     Réponse E
-                </label>
-                <label class="form-control">
-                    <input type="radio" id="F" name="unique" value="F">
-                    Réponse F
                 </label>
             </fieldset>
             
