css page de fin + lien pages + date naissance + ajout pdf

--- a/Fini.html
+++ b/Fini.html
@@ -16,6 +16,7 @@
         <h1>Concours sécurité routière ASRE49</h1>
         <img src="Images/dessin_route.png" alt="dessin d'une route" class="deco">
     </header>
+    <p class="message">Message de prévention Message de prévention Message de prévention Message de prévention Message de prévention</p>
     <h2>Merci d'avoir participé !</h2>
     <p><a href="https://www.asre49.com/">Accéder au site de l'ASRE49</a></p>
 </body>
