--- a/Main.html
+++ b/Main.html
@@ -15,7 +15,7 @@
         <h1>Concours sécurité routière ASRE49</h1>
         <img src="Images/dessin_route.png" alt="dessin d'une route" class="deco">
     </header>
-    <a id="livret" href="Documents\chp 1 - intro - algo v5 - sept2019.pdf" target="_blank">Livret pédagogique</a>
+    <p>Accédez au <a id="livret" href="Documents\chp 1 - intro - algo v5 - sept2019.pdf" target="_blank">Livret pédagogique</a></p>
     <form id="formulaire">
         <p class="sous-titre">Vos informations :</p>
         <label>
