modif css accueil

--- a/Accueil.html
+++ b/Accueil.html
@@ -16,6 +16,11 @@
         <h1>Concours sécurité routière ASRE49</h1>
         <img src="Images/dessin_route.png" alt="dessin d'une route" class="deco">
     </header>
+    
+    <a class="truc" id="boutonQuest" href="Main.html" target="_blank">Questionnaire en ligne</a>
+    <a class="truc" href="Documents\chp 1 - intro - algo v5 - sept2019.pdf" target="_blank">Livret pédagogique</a>
+    <a class="truc" href="Documents\chp 1 - intro - algo v5 - sept2019.pdf" target="_blank">Règlement du concours</a>
+
     <p>Merci à nos partenaires</p>
     <div id="logos">
         <img src="Images\logo_prefet_maine_et_loire.png" alt="Logo Préfet du Maine-et-Loire" class="logo">
@@ -23,8 +28,5 @@
         <img src="Images\logoCCI_2_fond.png" alt="Logo CCI Maine-et-Loire" class="logo">
         <img src="Images\logo_medef.png" alt="Logo MEDEF" class="logo">
     </div>
-    
-    <a id="truc" href="Main.html" target="_blank">Questionnaire en ligne</a>
-    <a id="ggg" href="Documents\chp 1 - intro - algo v5 - sept2019.pdf" target="_blank">Livret pédagogique</a>
-    <a class="truc" href="Documents\chp 1 - intro - algo v5 - sept2019.pdf" target="_blank">Règlement du concours</a>
+
 </body>
