--- a/Accueil.html
+++ b/Accueil.html
@@ -12,14 +12,15 @@
 </head>
 <body>
     <header>
-        <img src="Images\Google_Maps_icon_(2015-2020).svg.png" alt="Logo ASRE49" id="logo_ASRE49">
+        <img src="Images\ASRE_49_Logotype_ASRE_Baseline_Logo_Horizon_Couleurs.jpg" alt="Logo ASRE49" id="logo_ASRE49">
         <h1>Concours sécurité routière ASRE49</h1>
-        <img src="Images/dessin_route.png" alt="dessin d'une route" class="deco">
+        <img src="Images\route_ASRE49_logo.png" alt="dessin d'une route" class="deco">
     </header>
     
-    <a class="truc" id="boutonQuest" href="Main.html" target="_blank">Questionnaire en ligne</a>
-    <a class="truc" href="Documents\chp 1 - intro - algo v5 - sept2019.pdf" target="_blank">Livret pédagogique</a>
-    <a class="truc" href="Documents\chp 1 - intro - algo v5 - sept2019.pdf" target="_blank">Règlement du concours</a>
+    <p id="ligne"></p>
+    <a class="boutonsAccueil" href="Main.html" target="_blank">Questionnaire en ligne</a>
+    <a class="boutonsAccueil" href="Documents\chp 1 - intro - algo v5 - sept2019.pdf" target="_blank">Livret pédagogique</a>
+    <a class="boutonsAccueil" href="Documents\chp 1 - intro - algo v5 - sept2019.pdf" target="_blank">Règlement du concours</a>
 
     <p>Merci à nos partenaires</p>
     <div id="logos">
