--- a/Fini.html
+++ b/Fini.html
@@ -12,9 +12,9 @@
 
 <body>
     <header>
-        <img src="Images\Google_Maps_icon_(2015-2020).svg.png" alt="Logo ASRE49" id="logo_ASRE49">
+        <img src="Images\ASRE_49_Logotype_ASRE_Baseline_Logo_Horizon_Couleurs.jpg" alt="Logo ASRE49" id="logo_ASRE49">
         <h1>Concours sécurité routière ASRE49</h1>
-        <img src="Images/dessin_route.png" alt="dessin d'une route" class="deco">
+        <img src="Images\route_ASRE49_logo.png" alt="dessin d'une route" class="deco">
     </header>
     <p class="message">Message de prévention Message de prévention Message de prévention Message de prévention Message de prévention</p>
     <h2>Merci d'avoir participé !</h2>
