--- a/Main.html
+++ b/Main.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <header>
-        <img src="Images\Google_Maps_icon_(2015-2020).svg.png" alt="Logo ASRE49" id="logo_ASRE49">
+        <img src="Images\ASRE_49_Logotype_ASRE_Baseline_Logo_Horizon_Couleurs.jpg" alt="Logo ASRE49" id="logo_ASRE49">
         <h1>Concours sécurité routière ASRE49</h1>
-        <img src="Images/dessin_route.png" alt="dessin d'une route" class="deco">
+        <img src="Images\route_ASRE49_logo.png" alt="dessin d'une route" class="deco">
     </header>
     <p>Accédez au <a id="livret" href="Documents\chp 1 - intro - algo v5 - sept2019.pdf" target="_blank">Livret pédagogique</a></p>
     <form id="formulaire" method="post" action="https://script.google.com/macros/s/AKfycbxXM7YWCJlfaiiSbC3qhYQ7aNs79oJkYRQs0ORP0AU-lfGkKVVCILd3fYwpO-NDTOmDpw/exec">
