--- a/Accueil.html
+++ b/Accueil.html
@@ -12,7 +12,8 @@
 </head>
 <body>
     <header>
-        <img src="Images\ASRE_49_Logotype_ASRE_Baseline_Logo_Horizon_Couleurs.jpg" alt="Logo ASRE49" id="logo_ASRE49">
+        <img src="Images\ASRE_49_Logotype_ASRE_Baseline_Logo_Horizon_Couleurs.jpg" alt="Logo ASRE49" class="logo_ASRE49_horiz">
+        <img src="Images\ASRE_49_Logotype_ASRE_Baseline_Logo_Verti_Couleurs.jpg" alt="Logo ASRE49" class="logo_ASRE49_verti">
         <h1>Concours sécurité routière ASRE49</h1>
         <img src="Images\route_ASRE49_logo.png" alt="dessin d'une route" class="deco">
     </header>
