--- a/Main.html
+++ b/Main.html
@@ -89,19 +89,19 @@
             <fieldset>
                 <p class="question">En ville les EDPM doivent se déplacer :</p>
                 <label class="form-control">
-                    <input type="checkbox" id="D" name="Q2A" value="D">
+                    <input type="checkbox" id="D" name="Q2A" value="A">
                     Uniquement sur les pistes cyclables
                 </label>
                 <label class="form-control">
-                    <input type="checkbox" id="E" name="Q2B" value="E">
+                    <input type="checkbox" id="E" name="Q2B" value="B">
                     Uniquement sur la route
                 </label>
                 <label class="form-control">
-                    <input type="checkbox" id="E" name="Q2C" value="E">
+                    <input type="checkbox" id="E" name="Q2C" value="C">
                     Les deux sont possibles
                 </label>
                 <label class="form-control">
-                    <input type="checkbox" id="E" name="Q2D" value="E">
+                    <input type="checkbox" id="E" name="Q2D" value="D">
                     Sur les trottoirs
                 </label>
             </fieldset>
@@ -109,15 +109,15 @@
             <fieldset>
                 <p class="question">Lors d’un déplacement pour une mission le salarié a obligation de respecter</p>
                 <label class="form-control">
-                    <input type="checkbox" id="F" name="Q3A" value="F">
+                    <input type="checkbox" id="F" name="Q3A" value="A">
                     Le code de la route
                 </label>
                 <label class="form-control">
-                    <input type="checkbox" id="G" name="Q3B" value="G">
+                    <input type="checkbox" id="G" name="Q3B" value="B">
                     Le règlement intérieur de l’entreprise
                 </label>
                 <label class="form-control">
-                    <input type="checkbox" id="H" name="Q3C" value="H">
+                    <input type="checkbox" id="H" name="Q3C" value="C">
                     Les deux
                 </label>
             </fieldset>
@@ -125,19 +125,19 @@
             <fieldset>
                 <p class="question">Combien doit-il y avoir de sticker angle mort sur un poids lourd ?</p>
                 <label class="form-control">
-                    <input type="checkbox" id="I" name="Q4A" value="I">
+                    <input type="checkbox" id="I" name="Q4A" value="A">
                     2
                 </label>
                 <label class="form-control">
-                    <input type="checkbox" id="J" name="Q4B" value="J">
+                    <input type="checkbox" id="J" name="Q4B" value="B">
                     4
                 </label>
                 <label class="form-control">
-                    <input type="checkbox" id="K" name="Q4C" value="K">
+                    <input type="checkbox" id="K" name="Q4C" value="C">
                     6
                 </label>
                 <label class="form-control">
-                    <input type="checkbox" id="K" name="Q4D" value="K">
+                    <input type="checkbox" id="K" name="Q4D" value="D">
                     8
                 </label>
             </fieldset>
@@ -145,19 +145,19 @@
             <fieldset>
                 <p class="question"> Afin d'assurer une régularité dans l'entretien de ma voiture, je dois prendre en compte:</p>
                 <label class="form-control">
-                    <input type="checkbox" id="L" name="Q5A" value="L">
+                    <input type="checkbox" id="L" name="Q5A" value="A">
                     Le kilométrage
                 </label>
                 <label class="form-control">
-                    <input type="checkbox" id="M" name="Q5B" value="M">
+                    <input type="checkbox" id="M" name="Q5B" value="B">
                     La vieillesse du véhicule
                 </label>
                 <label class="form-control">
-                    <input type="checkbox" id="N" name="Q5C" value="N">
+                    <input type="checkbox" id="N" name="Q5C" value="C">
                     Le modèle
                 </label>
                 <label class="form-control">
-                    <input type="checkbox" id="O" name="Q5D" value="O">
+                    <input type="checkbox" id="O" name="Q5D" value="D">
                     La consommation de carburant
                 </label>
             </fieldset>
@@ -167,15 +167,15 @@
                     pendant quelques minutes” <br>
                     Pourquoi à t’il tort ? : </p>
                 <label class="form-control">
-                    <input type="checkbox" id="L" name="Q6A" value="L">
+                    <input type="checkbox" id="L" name="Q6A" value="A">
                     Car un redémarrage du moteur consomme tout le temps moins que de laisser tourner
                 </label>                
                 <label class="form-control">
-                    <input type="checkbox" id="N" name="Q6B" value="N">
+                    <input type="checkbox" id="N" name="Q6B" value="B">
                     Car au-delà de 20 secondes, le moteur consomme plus au redémarrage
                 </label>
                 <label class="form-control">
-                    <input type="checkbox" id="O" name="Q6C" value="O">
+                    <input type="checkbox" id="O" name="Q6C" value="C">
                     Car au-delà de 20 secondes, le moteur consomme moins au redémarrage
                 </label>
 
@@ -186,16 +186,16 @@
                 <p class="question">Vous vous retrouvez dans la nécessité absolue de vous arrêter/stationner sur un accotement
                     ou une bande d'arrêt d'urgence. Comment procédez-vous ? </p>
                 <label class="form-control">
-                    <input type="checkbox" id="L" name="Q7A" value="L">
+                    <input type="checkbox" id="L" name="Q7A" value="A">
                     Rien, il est interdit de stationner ou de s’arrêter même en cas de nécessité absolue
                 </label>                
                 <label class="form-control">
-                    <input type="checkbox" id="M" name="Q7B" value="M">
+                    <input type="checkbox" id="M" name="Q7B" value="B">
                     Vous assurez la pré-signalisation du véhicule et vous vous mettez en sécurité derrière les 
                     barrières de sécurité                    
                 </label>
                 <label class="form-control">
-                    <input type="checkbox" id="N" name="Q7C" value="N">
+                    <input type="checkbox" id="N" name="Q7C" value="C">
                     Vous assurez la pré-signalisation du véhicule et vous attendez dans votre véhicule que le 
                     dégagement d’urgence soit réalisé    
                 </label>
@@ -203,15 +203,15 @@
             <fieldset>
                 <p class="question">Comment réagir suite à l’annonce d’une bretelle de sortie sur une autoroute à deux voies ? </p>
                 <label class="form-control">
-                    <input type="checkbox" id="L" name="Q8A" value="L">
+                    <input type="checkbox" id="L" name="Q8A" value="A">
                     Je me trouve sur la voie de gauche et emprunte la bretelle de sortie dès que possible
                 </label>                
                 <label class="form-control">
-                    <input type="checkbox" id="M" name="Q8B" value="M">
+                    <input type="checkbox" id="M" name="Q8B" value="B">
                     Je me trouve sur la voie de droite et m’engage sur la bretelle de sortie à la fin de celle-ci
                 </label>
                 <label class="form-control">
-                    <input type="checkbox" id="N" name="Q8C" value="N">
+                    <input type="checkbox" id="N" name="Q8C" value="C">
                     Je me trouve sur la voie de droite et m’engage sur la bretelle de sortie dès que possible
                 </label>
             </fieldset>
@@ -219,15 +219,15 @@
                 <p class="question"> Vous vous déplacez en voiture sur une voie de tram autorisée, quelle signalétique devez-vous suivre ?
                      </p>
                 <label class="form-control">
-                    <input type="checkbox" id="L" name="Q9A" value="L">
+                    <input type="checkbox" id="L" name="Q9A" value="A">
                     Aucune 
                 </label>                
                 <label class="form-control">
-                    <input type="checkbox" id="M" name="Q9B" value="M">
+                    <input type="checkbox" id="M" name="Q9B" value="B">
                     La nouvelle : selon les règles de circulation du tram
                 </label>
                 <label class="form-control">
-                    <input type="checkbox" id="N" name="Q9C" value="N">
+                    <input type="checkbox" id="N" name="Q9C" value="C">
                     Les voies de tram sont toujours interdites à la circulation des voitures
 
                 </label>
