Rename Accueil en index

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Concours sécurité routière 2023 de l'ASRE49. Questionnaire et livret pédagogique.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Main.css">
-    <link rel="stylesheet" href="Accueil.css">
+    <link rel="stylesheet" href="index.css">
     <title>ASRE49 - Accueil</title>
 </head>
 <body>
